# image-similarity-search

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  start.sh
.github/workflows/: sync_to_hub.yml
config/: db.py
src/: main.py  pipeline.py
src/api/: routes.py
src/config/: db.py
src/core/: config.py
src/database/: connection.py  crud_images.py
src/ml/embedders/: dino.py
src/models/: models.py
src/services/: image_service.py
src/utils/: image_utils.py
