[project]
name = "image-similarity-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.49",
    "sqlite-vec>=0.1.9",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
